<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:id="@+id/enterCardDetailsLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterCardDetailsTextView"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardNumberEditText"
        android:hint="@string/card_number"
        android:background="@drawable/box"
        android:inputType="number"
        android:maxLength="19"
        android:layout_marginBottom="1dp"
        android:padding="3dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameOnCardEditText"
        android:hint="@string/name_on_card"
        android:background="@drawable/box"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
        android:layout_marginBottom="1dp"
        android:padding="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/expiryCvvLinearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/box"
            android:id="@+id/expiryDatePickerEditText"
            android:hint="@string/expires"
            android:layout_marginBottom="1dp"
            android:padding="3dp"
            android:inputType="date" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cvvEditText"
            android:layout_gravity="center"
            android:hint="@string/cvv"
            android:background="@drawable/box"
            android:inputType="numberPassword"
            android:password="true"
            android:maxLength="3"
            android:layout_marginBottom="1dp"
            android:padding="3dp"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/storeCardCheckBox"
        android:text="@string/store_card_check"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardNameEditText"
        android:hint="@string/card_name"
        android:background="@drawable/box"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
        android:visibility="gone"
        android:layout_marginBottom="1dp"
        android:padding="3dp"/>
</LinearLayout>
