<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.payu.sdk.fragments.StoredCardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/buttonsContainer">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_new_card"
            android:id="@+id/useNewCardButton"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_save_card"
        android:layout_margin="10dp"
        android:id="@+id/savedCardTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noCardFoundTextView"
        android:text="@string/no_card_found"
        android:padding="128dp"
        android:visibility="gone"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/storedCardListView"
        android:layout_below="@id/savedCardTextView"
        android:layout_above="@id/buttonsContainer"/>

</RelativeLayout>
