<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.payu.sdk.fragments.CardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/issuerDownTextView"
            android:textColor="#FF0000"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/error_box"
            android:visibility="gone"/>

        <include layout="@layout/card_details_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/haveCvvExpiryLinearLayout"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/haveClickHereTextView"
                android:textColor="@color/blue"
                android:clickable="true"
                android:text="@string/click_here"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/haveCvvAndExpiryTextView"
                android:text="@string/if_cvv_and_expiry_on_card"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/dontHaveCvvExpiryLinearLayout"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dontHaveClickHereTextView"
                android:textColor="@color/blue"
                android:clickable="true"
                android:text="@string/click_here"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dontHaveCvvAndExpiryTextView"
                android:text="@string/if_dont_cvv_and_expiry_on_card"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/makePayment"
            android:text="@string/pay_now"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:enabled="false"/>

    </LinearLayout>

</ScrollView>
